# cwkCursorPippaMCP

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt
learning/: README.md  SDK-GUIDE.md  TROUBLESHOOTING.md
learning/simple_mcp_tool/: README.md  pyproject.toml  test_tool.py
learning/simple_mcp_tool/simple_mcp_tool/: __init__.py  __main__.py  server.py
mcp-pippa-memory/: .env.example  README.md  pyproject.toml  streamlit_app.py
mcp-pippa-memory/mcp_pippa_memory/: __init__.py  __main__.py  config.py  memory.py  server.py
